; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_ifa_ifwithroute_scoped_locked.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_ifa_ifwithroute_scoped_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifaddr = type { i32 }
%struct.sockaddr = type { i32 }

@IFSCOPE_NONE = common dso_local global i32 0, align 4
@RTF_IFSCOPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ifaddr* @ifa_ifwithroute_scoped_locked(i32 %0, %struct.sockaddr* %1, %struct.sockaddr* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.sockaddr*, align 8
  %7 = alloca %struct.sockaddr*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.sockaddr* %1, %struct.sockaddr** %6, align 8
  store %struct.sockaddr* %2, %struct.sockaddr** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @IFSCOPE_NONE, align 4
  %11 = icmp ne i32 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %4
  %13 = load i32, i32* @RTF_IFSCOPE, align 4
  %14 = load i32, i32* %5, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %5, align 4
  br label %21

16:                                               ; preds = %4
  %17 = load i32, i32* @RTF_IFSCOPE, align 4
  %18 = xor i32 %17, -1
  %19 = load i32, i32* %5, align 4
  %20 = and i32 %19, %18
  store i32 %20, i32* %5, align 4
  br label %21

21:                                               ; preds = %16, %12
  %22 = load i32, i32* %5, align 4
  %23 = load %struct.sockaddr*, %struct.sockaddr** %6, align 8
  %24 = load %struct.sockaddr*, %struct.sockaddr** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = call %struct.ifaddr* @ifa_ifwithroute_common_locked(i32 %22, %struct.sockaddr* %23, %struct.sockaddr* %24, i32 %25)
  ret %struct.ifaddr* %26
}

declare dso_local %struct.ifaddr* @ifa_ifwithroute_common_locked(i32, %struct.sockaddr*, %struct.sockaddr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
